<resources>
    <string name="app_name">Newber</string>
    <string name="API_KEY">AIzaSyAGmBxEjzU68YpgCNWsldO73dFcwnj0BT8</string>
    <string name="rider">Rider</string>
    <string name="driver">Driver</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="username">Username</string>
    <string name="phone_number">Phone Number</string>
    <string name="email_address">Email Address</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="sign_up">Sign Up</string>
    <string name="login_from_sign_up">Already registered? <u>Login</u></string>
    <string name="login">Login</string>
    <string name="sign_up_from_login">Don\'t have an account? <u>Sign Up</u></string>
    <string name="profile">Profile</string>
    <string name="rating">Rating</string>
    <string name="edit">Edit</string>
    <string name="logout">Logout</string>
    <string name="no_ride_req_msg">You currently have no ride request.</string>
    <string name="create_request_button_txt">Create a request</string>
    <string name="rider_pending_request_msg">Waiting for a driver to accept the request...</string>
</resources>
